--- a/views/newprod.ejs
+++ b/views/newprod.ejs
@@ -23,7 +23,7 @@
                     <option value="6">PC Skrinky</option>
                     <option value="7">Zdroje</option>
                     <option value="8">Chladenie</option>
-                    <option value="9">Black Friday</option>
+                    <option value="9">Zľavy</option>
                 </select>
             </div>
 
