--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -2,7 +2,7 @@
     <div class="content">
 
         <div class="tab row">
-            <h1>Objednávky</h1>
+            <h1><i class="fa-regular fa-file"></i> Objednávky</h1>
             <table>
                 <tbody class="orders-table">
                     <tr>
