--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -22,6 +22,9 @@ body {
     min-height: 100vh;
 }
 
+h1, h2 {
+    margin-bottom: 40px;
+}
 .logo {
     font-size: 40px;
     font-weight: 900;
@@ -157,7 +160,7 @@ p {
 
 footer {
     margin-top: 75px;
-    height: 180px;
+    height: 220px;
     background-color: rgb(153, 79, 79);
     text-align: center;
     padding: 1.5% 0;
