--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -2,22 +2,22 @@
     <div class="content">
 
         <div class="tab row">
-            <h2>Košík</h2>
+            <h1><i class="fa-solid fa-basket-shopping"></i> Košík</h1>
+            <% if(products.length == 0) { %>
+                <p style="text-align: center; font-size: 20px;"><i class="fa-regular fa-circle-xmark"></i> Košík je zatiaľ prázdny</p>
+            <% } %>
             <% for(let index=0; index < products.length; index++){ %>
                 <div class="row cart-item">
                     <div class="col-2 cart-image">
                         <img class="product-image" src="<%=products[index].img%>" alt="product-image">
                     </div>
-                    <div class="col-4 cart-name">
+                    <div class="col-6 cart-name">
                         <h1>
                             <%=products[index].name%>
                         </h1>
                         <p>
                             Na sklade <%=products[index].stock%> kusov
                         </p>
-                    </div>
-                    <div class="col-2">
-                        <p>1</p>
                     </div>
                     <div class="col-2">
                         <form action="/removefromcart/<%= products[index]._id%>" method="post">
@@ -33,7 +33,7 @@
                 <% } %>
         </div>
         <div class="tab row">
-            <h2>Sumár</h2>
+            <h2><i class="fa-solid fa-file"></i> Sumár</h2>
             <div class="sum">
                 <div class="sum-div">
                     <form action="/coupon" method="post">
