--- a/views/newprod.ejs
+++ b/views/newprod.ejs
@@ -29,7 +29,7 @@
 
             <div class="form-group">
                 <label for="newProdDescription">Popis</label>
-                    <input type="text" class="form-control" name="newProdDescription" placeholder="napr. 'Procesor 8-jadrový, 16 vláken, ...'" required>
+                    <textarea class="form-control" name="newProdDescription" id="newProdDescription" cols="110" rows="5" placeholder="napr. 'Procesor 8-jadrový, 16 vláken, ...'"></textarea>
             </div>
 
             <div class="form-group">
@@ -50,7 +50,7 @@
                 <label for="newProdImg">URL na obrázok</label>
                     <input type="text" class="form-control" name="newProdImg" placeholder="napr. 'https://cdn.alza.sk/ia45g5r4sd3b'" required>
             </div>
-            <button type="submit" class="btn btn-primary">Pridať</button>
+            <button type="submit" class="btn btn-primary"><i class="fa-solid fa-plus"></i> Pridať</button>
         </form>
     </div>
 
