--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -14,12 +14,16 @@
     <div class="footer-p">
 
     </div>
-    <p>E-mail: postavpc@zoznam.sk</p>
-    <p>Tel. číslo: +421 902 592 902</p>
+    <p>E-mail: postavpc@zoznam.sk &nbsp&nbsp Tel. číslo: +421 902 592 902</p>
+    <form action="">
+        <label for="email"><p style="color:black;">Prihlásiť sa na odber noviniek: &nbsp&nbsp</p></label>
+        <input type="text" style="border-radius: 10px; border: none;" placeholder="email">
+        <button class="btn" style="background-color: rgb(255, 202, 202);">Prihlásiť sa</button>
+    </form>
 
 </footer>
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="../js/frontend.js"></script>
 </body>
 </html>
