--- a/views/product.ejs
+++ b/views/product.ejs
@@ -7,7 +7,7 @@
         </div>
          <div class="col-6">
             <h1><b><%=product.name%></b></h1>
-            <p><%=product.desc%></p>
+            <p style="font-size: 18px;"><%=product.desc%></p>
             <span class="price"><%=product.price.toFixed(2)%> €</span>
             <div class="product-buttons">
                <form action="/addtocart/<%=product._id%>" method="post">
@@ -19,10 +19,16 @@
                   <% if(user.isAdmin) { %>
                      <form action="/deleteproduct/<%=product._id%>" method="post">
                         <button type="submit" class="btn btn-danger m-2"><i class="fa-solid fa-trash-can"></i> Vymazať</button>
-                        <!-- <a href="#" class="btn btn-danger"><i class="fa-solid fa-trash-can"></i> Vymazať</a> -->
                      </form>  
                   <% } %> 
               <% } %>
+              <% if(typeof user !== 'undefined') { %>
+               <% if(user.isAdmin) { %>
+                  <form action="/editproduct/<%=product._id%>" method="get">
+                     <button type="submit" class="btn btn-warning m-2"><i class="fa-solid fa-pen-to-square"></i> Upraviť</button>
+                  </form>  
+               <% } %> 
+           <% } %>
             </div>
             
          </div>
