--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -8,10 +8,10 @@
 
             
                 <form action="/" method="GET">
-                    <button class="btn btn-primary m-2" type="submit">Domov</button>
+                    <button class="btn btn-primary m-2" type="submit"><i class="fa-solid fa-house"></i> Domov</button>
                 </form>
                 <form action="/logout" method="POST">
-                    <button class="btn btn-danger m-2">Odhlásiť sa</button>
+                    <button class="btn btn-danger m-2"><i class="fa-solid fa-arrow-right-from-bracket"></i> Odhlásiť sa</button>
                 </form>
             </div>
 
@@ -19,6 +19,7 @@
 
         <div class="tab row">
             <h2>Objednávky</h2>
+            <% if(orders.length > 0) { %>
             <table>
                 <tbody class="orders-table">
                     <tr>
@@ -36,6 +37,9 @@
                     <% } %>
                 </tbody>
             </table>
+            <% } else { %>
+                <p style="text-align: center; font-size: 20px;"><i class="fa-regular fa-circle-xmark"></i> Zatiaľ žiadne objednávky</p>
+            <% } %> 
         </div>
 
 
