--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -1,4 +1,14 @@
 <%- include('partials/header', {user: user}); %>
+    <style>
+        td>a {
+            color: #ff8888;
+            text-decoration: none;
+        }
+        td>a:hover {
+            text-decoration: underline;
+            color: #ff8888;
+        }
+    </style>
     <div class="content">
 
         <div class="tab row">
