--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -15,11 +15,15 @@
 
     </div>
     <p>E-mail: postavpc@zoznam.sk &nbsp&nbsp Tel. číslo: +421 902 592 902</p>
-    <form action="">
-        <label for="email"><p style="color:black;">Prihlásiť sa na odber noviniek: &nbsp&nbsp</p></label>
-        <input type="text" style="border-radius: 10px; border: none;" placeholder="email">
-        <button class="btn" style="background-color: rgb(255, 202, 202);">Prihlásiť sa</button>
+    <form action="/" method="get">
+        <div class="input-group mb-3" style="padding: 0 40%;">
+            <input type="text" class="form-control" placeholder="Prihlásiť sa na odber noviniek">
+            <button class="btn btn-dark" type="submit" id="button-addon2">Prihlásiť sa</button>
+        </div>
     </form>
+    
+    
+    
 
 </footer>
     <!-- JavaScript Bundle with Popper -->
