--- a/views/partials/sidenav.ejs
+++ b/views/partials/sidenav.ejs
@@ -15,7 +15,7 @@
         <% if(user.isAdmin) { %>
             <div class="sidenav-group">
                 <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="width: 100%;">
+                    <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="width: 100%;">
                         Admin Menu
                     </button>
                     <ul class="dropdown-menu" style="width:100%;">
