--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -4,14 +4,16 @@
         <div class="tab row">
             <h1><i class="fa-solid fa-basket-shopping"></i> Košík</h1>
             <% if(products.length == 0) { %>
-                <p style="text-align: center; font-size: 20px;"><i class="fa-regular fa-circle-xmark"></i> Košík je zatiaľ prázdny</p>
+                <p style="text-align: center; font-size: 20px; margin-bottom: 50px;"><i class="fa-regular fa-circle-xmark"></i> Košík je zatiaľ prázdny</p>
             <% } %>
+            <% let total = 0; %>
             <% for(let index=0; index < products.length; index++){ %>
+                <% total += products[index].price; %>
                 <div class="row cart-item">
-                    <div class="col-2 cart-image">
+                    <div class="col-1 cart-image">
                         <img class="product-image" src="<%=products[index].img%>" alt="product-image">
                     </div>
-                    <div class="col-6 cart-name">
+                    <div class="col-7 cart-name">
                         <h1>
                             <%=products[index].name%>
                         </h1>
@@ -22,7 +24,7 @@
                     <div class="col-2">
                         <form action="/removefromcart/<%= products[index]._id%>" method="post">
                             <button class="removeFromCartButton btn btn-danger">
-                                Odstrániť
+                                <i class="fa-solid fa-trash-can"></i> Odstrániť
                             </button>
                         </form>
                     </div>
@@ -56,10 +58,10 @@
             </div>
             <div class="cart-buttons">
                 <form action="/" method="get" class="back-btn">
-                    <button type="submit" class="btn btn-danger">Späť domov</button>
+                    <button type="submit" class="btn btn-danger"><i class="fa-solid fa-house"></i> Späť domov</button>
                 </form>
                 <form action="/checkout" method="get" class="continue-btn">
-                    <button type="submit" class="btn btn-primary">Pokračovať</button>
+                    <button type="submit" class="btn btn-primary">Pokračovať <i class="fa-solid fa-arrow-right"></i></button>
                 </form>
             </div>
             
