--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,4 +1,14 @@
 <%- include('partials/header', {user: user}); %>
+    <style>
+        td>a {
+            color: #ff8888;
+            text-decoration: none;
+        }
+        td>a:hover {
+            text-decoration: underline;
+            color: #ff8888;
+        }
+    </style>
     <div class="content">
         <div class="tab row">
             <h2>Prihlásený ako: <%= user.username %> (<%=user.email%>)</h2>
@@ -18,7 +28,7 @@
         </div>
 
         <div class="tab row">
-            <h2>Objednávky</h2>
+            <h2><i class="fa-regular fa-file"></i> Vaše objednávky</h2>
             <% if(orders.length > 0) { %>
             <table>
                 <tbody class="orders-table">
@@ -38,7 +48,7 @@
                 </tbody>
             </table>
             <% } else { %>
-                <p style="text-align: center; font-size: 20px;"><i class="fa-regular fa-circle-xmark"></i> Zatiaľ žiadne objednávky</p>
+                <p style="text-align: center; font-size: 20px; margin-bottom: 50px"><i class="fa-regular fa-circle-xmark"></i> Zatiaľ žiadne objednávky</p>
             <% } %> 
         </div>
 
