--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -27,7 +27,7 @@
                             <td><%=orders[i].email%></td>
                             <td><%=orders[i].status%></td>
                             <% let date = new Date(orders[i].created); %>
-                            <td><%=date.getDate()%>.<%=date.getMonth()%>.<%=date.getFullYear()%></td>
+                            <td><%=date.getDate()%>.<%=date.getMonth() + 1%>.<%=date.getFullYear()%></td>
                         </tr>
                     <% } %>
                 </tbody>
